--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
 
-<body>
-    <h1>this is screen test
+    <link rel="stylesheet" href="main.css">
 
-    </h1>
-</body>
+
+    <body>
+        <div class="container">
+            <h2>this hex color is : <span class="hex"></span></h2>
+            <button type="button" class="hexBtn">press this to change color</button>
+            <script src="script.js"></script>
+        </div>
+    </body>
 
 </html>
