--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         #myPanoViewer {
             position: relative;
             /* Must be relative or absolute.*/
-            width: 600px;
+            width: 100%;
             height: 400px;
         }
     </style>
@@ -25,7 +25,8 @@
 
         var panoViewer = new PanoViewer(container, {
             // If projectionType is not specified, the default is "equirectangular".
-            image: "equirectangular.png" // Specifies an image of the "equirectangular" type.
+            image: "Big_ben_equirectangular.jpg" // Specifies an image of the "equirectangular" type.
+            gyroMode: "VR"
         });
     </script>
 
