--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         var panoViewer = new PanoViewer(container, {
             // If projectionType is not specified, the default is "equirectangular".
-            image: "Big_ben_equirectangular.jpg" // Specifies an image of the "equirectangular" type.
+            image: "equirectangular.png" // Specifies an image of the "equirectangular" type.
             gyroMode: "VR"
         });
     </script>
