--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="qrcode.js"></script>
     <style>
         #myPanoViewer {
             position: relative;
             /* Must be relative or absolute.*/
             width: 100%;
-            height: 400px;
+            height: 50vh;
         }
     </style>
 </head>
 
 <body>
+    <div class="qrcode"></div>
 
     <div id="myPanoViewer"></div>
+
     <script src="//naver.github.io/egjs-view360/release/latest/dist/PanoViewer/view360.panoviewer.pkgd.min.js"></script>
     <script>
         // create PanoViewer with option
