--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         var panoViewer = new PanoViewer(container, {
             // If projectionType is not specified, the default is "equirectangular".
-            image: "equirectangular.png" // Specifies an image of the "equirectangular" type.
+            image: "equirectangular.png", // Specifies an image of the "equirectangular" type.
+            gyroMode: "VR"
 
         });
     </script>
