--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="qrcode"></div>
+    <div class="qrcode">X</div>
 
     <div id="myPanoViewer"></div>
 
@@ -28,7 +28,7 @@
 
         var panoViewer = new PanoViewer(container, {
             // If projectionType is not specified, the default is "equirectangular".
-            image: "equirectangular.png", // Specifies an image of the "equirectangular" type.
+            image: "Big_ben_equirectangular.jpg", // Specifies an image of the "equirectangular" type.
             gyroMode: "VR"
 
         });
