ready for bukket on inside_app

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>this is text over pan #myPanoViewer</h1>
     </header>
 
-    <script src="//naver.github.io/egjs-view360/release/latest/dist/PanoViewer/view360.panoviewer.pkgd.min.js"></script>
+    <script src="commonScripts\LookAround.js"></script>
     <script>
         // create PanoViewer with option
         var PanoViewer = eg.view360.PanoViewer;
