chanded the pic to decrease load time

--- a/inside_app/index.html
+++ b/inside_app/index.html
@@ -29,7 +29,7 @@
 
             var panoViewer = new PanoViewer(container, {
                 // If projectionType is not specified, the default is "equirectangular".
-                image: "vr2.jpg", // Specifies an image of the "equirectangular" type.
+                image: "Big_ben_equirectangular.jpg", // Specifies an image of the "equirectangular" type.
                 gyroMode: "VR"
 
             });
